Fixed gap on sidebar theme button

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -337,7 +337,7 @@ header {
 }
 
 .sidebarThemeButton {
-  gap: 1rem;
+  gap: 0.75rem;
   display: flex;
   font-size: 1.15rem;
   align-items: center;
